--- a/index.html
+++ b/index.html
@@ -453,7 +453,43 @@
                 <svg class="modal-close-btn" width="18" height="18">
                     <use href="./images/icon.svg/icon-cross.svg#cross"></use>
                 </svg>
-            </button>
+            </button>           
+            <form class="registered-form" name="registered-form" >
+                <strong class="register-form-title">Залиште свої дані, ми вам передзвонимо</strong>
+                <div class="registered-form-group" role="group">
+                    <label class="registered-form-field">
+                        <span class="registered-form-label">Ім'я</span>
+                        <input class="registered-form-input" type="text" name="user-name" placeholder="Antony Black" required>
+                        <svg class="registered-form-icon" width="18" height="18">
+                            <use href=""></use>
+                        </svg>
+                    </label>
+                    <label class="registered-form-field">
+                        <span class="registered-form-label">Телефон</span>
+                        <input class="registered-form-input" type="text" name="user-phone" placeholder="+38 099 999 99 99" minlength="12" maxlength="12" required>
+                        <svg class="registered-form-icon" width="18" height="18">
+                            <use href=""></use>
+                        </svg>
+                    </label>
+                    <label class="registered-form-field">
+                        <span class="registered-form-label">Пошта</span>
+                        <input class="registered-form-input" type="email" name="user-email" placeholder="exemple@mail.com" required>
+                        <svg class="registered-form-icon" width="18" height="18">
+                            <use href=""></use>
+                        </svg>
+                    </label>
+                    
+                    <label class="registered-form-field">
+                        <textarea class="registered-form-message" name="user-message" rows="5" placeholder="Введіть текст"> </textarea>
+                    </label>
+                </div>               
+                    <label class="registered-form-agreement">
+                        <input class="registered-form-checkbox" type="checkbox" name="size" id="">
+                        <span class="registered-form-desc">Погоджуюся з розсилкою та приймаю <a class="registered-form-link" href="">Умови договору</a></span>
+                    </label>            
+                <button class="registered-form-btn" type="submit">Відправити</button>
+               
+            </form>
         </div>
     </div>
     <script src="./js/modal.js"></script>
