--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
                     </li>
                     <li class="list-persolnal">
                         <div class="div-personal">
-                            <img class="img-personal" src="./images/img-personal-3.jpg" alt="personal" width="270"
+                            <img class="img-personal" src="./images/img-personal-4.jpg" alt="personal" width="270"
                                 height="260">
                             <h3 class="personal-item">Микола Тарасов</h3>
                             <p class="personal-work">Marketing</p>
@@ -276,7 +276,7 @@
                     </li>
                     <li class="list-persolnal">
                         <div class="div-personal">
-                            <img class="img-personal" src="./images/img-personal-4.jpg" alt="personal" width="270"
+                            <img class="img-personal" src="./images/img-personal-3.jpg" alt="personal" width="270"
                                 height="260">
                             <h3 class="personal-item">Михайло Єрмаков</h3>
                             <p class="personal-work">UI Designer</p>
@@ -441,22 +441,25 @@
                         </li>
                     </ul>
                 </ul>
-            </div>
-        </div>
-        <form action="">
-            <strong>Підпишіться на розсилку</strong>
-            <div>
-                <label for="">
-                    <input type="text">
-                    <button type="submit">Підписатися
-                        <svg class="" width="20" height="20">
-                            <use href="./images/icon.svg/footer-icon.svg#icon-send"></use>
-                        </svg>
-                    </button>
-                </label>
-            </div>
-        </form>
 
+                
+        </div>
+                        <div class="send-mail-footer">
+                            <form>
+                                <strong class="title-footer">Підпишіться на розсилку</strong>
+                                <label for="mail-footer">
+                                    <div class="footer-send-block">
+                                        <input class="input-footer" type="text" placeholder="E-mail" name="mail-footer">
+                                </label>
+                                <button class="btn-footer" type="submit">
+                                    Підписатися
+                                    <svg class="send-footer" width="24" height="24">
+                                        <use href="./images/icon.svg/footer-icon.svg#icon-send"></use>
+                                    </svg>
+                                </button>
+                            </form>
+                        </div>
+    </div>
     </footer>
     <!-- js -->
     <div class="backdrop is-hidden" data-modal>
@@ -498,10 +501,10 @@
                 </div>               
                     <label class="register-form-agreement">
                         <input class="register-form-checkbox" type="checkbox" name="size" id="" />
-                        <svg  class="" width="20" height="20">
-                            <use href="./images/icon.svg/check.svg#vector" ></use>
-                            <use href="./images/icon.svg/check.svg#checkmark"></use>
-                        </svg>
+                        <!-- <svg  class="" width="20" height="20">
+                            <use class="icon-checked" href="./images/check.svg#icon-check-1" ></use>
+                            <use class="icon-unchecked" href="./images/check.svg#"></use>
+                        </svg> -->
                         <span class="register-form-desc">Погоджуюся з розсилкою та приймаю <a class="registered-form-link" href="">Умови договору</a></span>
                     </label>            
                 <button class="register-form-btn" type="submit">Відправити</button>
