--- a/portfolio.html
+++ b/portfolio.html
@@ -292,6 +292,21 @@
                     </ul>
                 </ul>
             </div>
+                                    <div class="send-mail-footer">
+                                        <form>
+                                            <strong class="title-footer">Підпишіться на розсилку</strong>
+                                            <label for="mail-footer">
+                                                <div class="footer-send-block">
+                                                    <input class="input-footer" type="text" placeholder="E-mail" name="mail-footer">
+                                            </label>
+                                            <button class="btn-footer" type="submit">
+                                                Підписатися
+                                                <svg class="send-footer" width="24" height="24">
+                                                    <use href="./images/icon.svg/footer-icon.svg#icon-send"></use>
+                                                </svg>
+                                            </button>
+                                        </form>
+                                    </div>
         </div>
     </address>
 
