--- a/index.html
+++ b/index.html
@@ -500,11 +500,11 @@
                     </label>
                 </div>               
                     <label class="register-form-agreement">
-                        <input class="register-form-checkbox" type="checkbox" name="size" id="" />
-                        <!-- <svg  class="" width="20" height="20">
-                            <use class="icon-checked" href="./images/check.svg#icon-check-1" ></use>
-                            <use class="icon-unchecked" href="./images/check.svg#"></use>
-                        </svg> -->
+                        <input class="register-form-checkbox visually-hidden" type="checkbox" id="user-agreement" name="user-agreement" required>
+                        <svg class="register-form-icons" width="16" height="15">
+                            <use class="icon-checked" href="./images/icon.svg/check.svg#icon-check-1"></use>
+                            <use class="icon-unchecked" href="./images/icon.svg/check.svg#icon-check"></use>
+                        </svg>
                         <span class="register-form-desc">Погоджуюся з розсилкою та приймаю <a class="registered-form-link" href="">Умови договору</a></span>
                     </label>            
                 <button class="register-form-btn" type="submit">Відправити</button>
