--- a/index.html
+++ b/index.html
@@ -392,7 +392,8 @@
             </div>
             <div class="container-contact footer-icon-box">
                 <ul class="footer-all">
-                    <p class="icon-text">ПРИЄДНУЙТЕСЬ</p>
+                    <p class="icon-text">ПРИЄДНУЙТЕСЬ  
+                    </p>
                     <ul class="footer-icon-list">
                         <li class="footer-link">
                             <a class="footer-site" href="https://www.instagram.com/" aria-label="Instagram"
@@ -427,10 +428,9 @@
                             </a>
                         </li>
                     </ul>
+                    
                 </ul>
-
-                
-        </div>
+       </div>
                         <div class="send-mail-footer">
                             <form>
                                 <strong class="title-footer">Підпишіться на розсилку</strong>
