--- a/index.html
+++ b/index.html
@@ -436,7 +436,7 @@
                                 <strong class="title-footer">Підпишіться на розсилку</strong>
                                 <label for="mail-footer">
                                     <div class="footer-send-block">
-                                        <input class="input-footer" type="text" placeholder="E-mail" name="mail-footer">
+                                        <input class="input-footer" type="text" placeholder="E-mail" name="mail-footer" placeholder>
                                 </label>
                                 <button class="btn-footer" type="submit">
                                     Підписатися
